integration-tests/tests/integration/snapshots/integration__archive_unsupported_build_filter.snap
---
source: integration-tests/tests/integration/main.rs
expression: output.stderr_as_str()
---
  error: predicate not allowed in `test-archive-filter` expressions
   ╭────
 1 │ test(sample_test)
   ·      ─────┬─────
   ·           ╰── this predicate is banned because test predicates are not supported while archiving
   ╰────

error: failed to parse filterset
